2007-08-20  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/ipmiconsole.h,
	ipmiconsole/src/libipmiconsole/ipmiconsole.c
	(ipmiconsole_engine_submit, ipmiconsole_ctx_create): Rename
	IPMICONSOLE_CONTEXT_STATUS_NONE to
	IPMICONSOLE_CONTEXT_STATUS_NOT_SUBMITTED.

	* ipmiconsole/src/libipmiconsole/ipmiconsole.h,
	ipmiconsole/src/libipmiconsole/ipmiconsole.c
	(ipmiconsole_engine_submit): Split back into
	ipmiconsole_engine_submit and ipmiconsole_engine_submit_block.

	* ipmiconsole/src/libipmiconsole/ipmiconsole.h,
	ipmiconsole/src/libipmiconsole/ipmiconsole.c
	(ipmiconsole_engine_submit, ipmiconsole_engine_submit_block):
	Collapse IPMICONSOLE_ERR_CTX_ALREADY_SUBMITTED into
	IPMICONSOLE_ERR_CTX_IS_SUBMITTED.

	* ipmiconsole/: Change
	IPMICONSOLE_ERR_INTERNAL_BMC_SETTINGS_INVALID to
	IPMICONSOLE_ERR_BMC_IMPLEMENTATION.  Adjust some error code return
	values accordingly.

	* ipmiconsole/src/libipmiconsole/ipmiconsole.h,
	ipmiconsole/src/libipmiconsole/ipmiconsole.c: Re-order error
	codes.

	* ipmiconsole/src/libipmiconsole/: Support new engine flag
	IPMICONSOLE_ENGINE_OUTPUT_ON_SOL_ESTABLISHED.
	
2007-08-17  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/: Fix documentation/comments.  Continued library
	fixes.  Support IPMICONSOLE_ENGINE_CLOSE_FD flag.  Support new
	IPMICONSOLE_ERR_TOO_MANY_OPEN_FILES error code.  Set close-on-exec
	on all file descriptors.  Fix race conditions and logic bugs.
	
2007-08-16  Albert Chu <chu11@llnl.gov>
	
	* common/doc/manpage-common-troubleshooting.man: Clean up text.

	* ipmimonitoring/ipmimonitoring.8.pre.in: Add ipmimonitoring
	specific troubleshooting.

	* ipmiconsole/src/libipmiconsole/: Significant code cleanup, race
	condition fixes, scalability fixes, logic fixes, bug fixes.

2007-08-15  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/: Re-do enginecomm code to be
	specific to submission blocking.  Re-work logic to close file
	descriptors after blocking is completed to save two file